# gzr-zebrands-backend-test

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: c20e8605ddb6_data_seeding.py  c3ec76783b94_initial_schema.py  ed93a1c4f111_products_views.py  f6f90f1ced04_products.py
app/api/: main.py
app/api/v1/dependencies/: container_manager.py  domain_exception_handler.py  exception_handler.py  middleware.py  permissions_validator_handler.py  user_logger.py
app/api/v1/endpoints/: api_router.py  auth.py  products.py  roles.py  users.py
app/api/v1/errors/: domain_validation_handler.py  http_exception_handler.py  sql_exception_handler.py  validation_error_handler.py
app/api/v1/errors/schemas/: base.py
app/api/v1/responses/schemas/: generic_response.py
app/src/catalogs/application/schemas/: products.py
app/src/catalogs/domain/: product.py  product_view.py
app/src/catalogs/domain/exceptions/: products.py
app/src/iam/domain/: permission.py  role.py  user.py
app/src/iam/infrastructure/: auth.py
app/src/shared/: message_constants.py  settings.py
app/src/shared/domain/: exceptions.py  unit_of_work.py
app/src/shared/infrastructure/: async_http_client.py  aws_logger.py  control_columns_generator.py  db_connections.py  mappers.py  run_migrations.py  sqla_unit_of_work.py
app/src/shared/utils/: exceptions_datails.py  logger.py
tests/: conftest.py
tests/factories/domain/iam/: permissions_factory.py  roles_factory.py  users_factory.py
tests/integration/domain/users/: test_user.py
(+63 files in other folders)
